-
Bug
-
Resolution: Done
-
Not Evaluated
-
Qt Creator 3.4.0
-
None
-
Ubuntu 14.10 64 bit
-
90985d18c0c20fafe29ed452888b2c87189048e5
- Have package lldb-3.4 installed on your machine.
This will install /usr/bin/lldb-platform-3.4. - Start Creator.
- Go to "Tools" -> "Options..." -> "Build & Run" -> "Debuggers".
Creator autodetected lldb-platform-3.4 as a debugger but can't use it. Neither type, name, ABI nor version can be detected, probably because lldb-platform-3.4 doesn't understand the switch --version.
I doubt that detecting this tool as a debugger is right.
| For Gerrit Dashboard: QTCREATORBUG-14309 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 110951,3 | Debugger: Blacklist lldb-platform-* as possible debugger | 3.4 | qt-creator/qt-creator | Status: MERGED | +2 | 0 |