Debugger: Blacklist lldb-platform-* as possible debugger

Task-number: QTCREATORBUG-14309
Change-Id: I86bb47138a1e3d76120d1c2d0625a86036715d57
Reviewed-by: Christian Stenger <christian.stenger@theqtcompany.com>
Reviewed-by: Eike Ziller <eike.ziller@theqtcompany.com>